# docs/openapi/swagger.json
@@ -29,6 +29,41 @@
                 }
             }
         },
+        "/login": {
+            "post": {
+                "parameters": [
+                    {
+                        "description": "Login User",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.Login.Req"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "token",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Login.Resp"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
+                            "$ref": "#/definitions/dm.ErrResp"
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "consumes": [
@@ -50,6 +85,29 @@
         }
     },
     "definitions": {
+        "controller.Login.Req": {
+            "type": "object",
+            "required": [
+                "Name",
+                "Password"
+            ],
+            "properties": {
+                "Name": {
+                    "type": "string"
+                },
+                "Password": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.Login.Resp": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "dm.ErrResp": {
             "type": "object",
             "properties": {
